# grpc-web-client

grpc-web-client/: Cargo.toml
grpc-web-client/src/: call.rs  lib.rs
test/test-client/: Cargo.toml
test/test-server/: Cargo.toml
