[package]
name = "grpc-web-client"
version = "0.2.0"
authors = [
        "Jonathan Rudenberg <jonathan@titanous.com>", 
        "Samuel Boyden <s.boyden@authentura.com>"
]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/titanous/grpc-web-client"
homepage = "https://github.com/titanous/grpc-web-client"
description = """
An implementation of the gRPC-Web protocol that allows using tonic in browsers via wasm.
"""
readme = "../README.md"
categories = ["web-programming", "network-programming", "asynchronous"]
keywords = ["grpc", "tonic", "wasm", "wasm-bindgen", "js"]

[dependencies]
base64 = { version = "0.13", default-features = false }
byteorder = { version = "1", default-features = false }
bytes = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
http = { version = "0.2", default-features = false }
http-body = { version = "0.4", default-features = false }
httparse = { version = "1", default-features = false }
hyper = { version = "0.14", default-features = false }
js-sys = { version = "0.3", default-features = false }
prost = { version = "0.10", default-features = false }
thiserror = "1.0.31"
tonic = { version = "0.7", default-features = false, features = ["codegen", "prost"] }
tower = { version = "0.4.5", default-features = false }
tracing = "*"
wasm-bindgen = { version = "0.2", default-features = false, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4", default-features = false }
wasm-streams = { version = "0.2" }

[dependencies.web-sys]
version = "0.3"
default-features = false
features = [
    "Headers",
    "ReadableStream",
    "Request",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]

[dependencies.getrandom]
version = "0.2"
default-features = false
features = ["js"]
